<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FirstProjectActivity!</string>
    <string name="app_name">CalculatorTA</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="memoryrecall">MR</string>
    <string name="memoryclear">MC</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    
    <string name="mul">*</string>
    <string name="memorym">M-</string>
    <string name="memoryp">M+</string>
    
    <string name="equal">=</string>
    <string name="fp">.</string>
    <string name="Erase">Erase</string>
    <string name="History">History</string>
    <string name="Clear">C</string>
    <string name="Back">Back</string>
    
   

</resources>